feature: added metrics / rest endpoint validations (#94)

--- a/channel-sender/config/config-local.yaml
+++ b/channel-sender/config/config-local.yaml
@@ -78,7 +78,7 @@ channel_sender_ex:
     # for more information about the kubernetes configuration with libcluser
 
 logger:
-  level: debug
+  level: info
 
 
 
