--- a/examples/back-async-java/applications/app-service/src/main/resources/application.yaml
+++ b/examples/back-async-java/applications/app-service/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
 adapter:
   restconsumer:
     timeout: 5000
-    url: "http://localhost:8081"
+    url: "${ADF_REST_ENDPOINT:http://localhost:8081/ext/channel}"
 management:
   endpoints:
     web:
@@ -28,7 +28,7 @@ management:
     circuitbreakers:
       enabled: true
 cors:
-  allowed-origins: "http://localhost:4200,http://localhost:8080"
+  allowed-origins: "${ALLOWED_CORS:http://localhost:4200,http://localhost:8080}"
 resilience4j:
   circuitbreaker:
     instances:
