--- a/examples/front-async-angular/angular.json
+++ b/examples/front-async-angular/angular.json
@@ -16,6 +16,7 @@
             "outputPath": "dist/front-async",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "preserveSymlinks": true,
             "polyfills": [
               "zone.js"
             ],
