--- a/examples/back-async-java/main.gradle
+++ b/examples/back-async-java/main.gradle
@@ -1,5 +1,3 @@
-apply plugin: 'info.solidsoft.pitest.aggregator'
-
 allprojects {
     repositories {
         mavenCentral()
@@ -12,12 +10,11 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'jacoco'
     apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'info.solidsoft.pitest'
 
     compileJava.dependsOn validateStructure
-    sourceCompatibility = JavaVersion.VERSION_17
-
-    //build.dependsOn 'pitest'
+    java {
+        sourceCompatibility = JavaVersion.VERSION_17
+    }
 
     test {
         useJUnitPlatform()
@@ -27,7 +24,7 @@ subprojects {
         implementation 'io.projectreactor:reactor-core'
         implementation 'io.projectreactor.addons:reactor-extra'
 
-        testImplementation 'io.projectreactor.tools:blockhound-junit-platform:1.0.9.RELEASE'
+        testImplementation 'io.projectreactor.tools:blockhound-junit-platform:1.0.10.RELEASE'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
         testImplementation 'io.projectreactor:reactor-test'
@@ -48,21 +45,6 @@ subprojects {
     }
 
     test.finalizedBy(project.tasks.jacocoTestReport)
-
-    pitest {
-        targetClasses = ['co.com.bancolombia.*']
-        excludedClasses = []
-        excludedTestClasses = []
-        verbose = true
-        outputFormats = ['XML', 'HTML']
-        threads = 8
-        exportLineCoverage = true
-        timestampedReports = false
-        fileExtensionsToFilter.addAll('xml', 'orbit')
-        junit5PluginVersion = '1.2.1'
-        failWhenNoMutations = false
-        jvmArgs = ["-XX:+AllowRedefinitionToAddDeleteMethods"]
-    }
 
     jacocoTestReport {
         dependsOn test
@@ -101,5 +83,5 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks.named('wrapper') {
-    gradleVersion = '8.10'
+    gradleVersion = '8.12.1'
 }
