--- a/examples/app_async_flutter/android/app/src/main/AndroidManifest.xml
+++ b/examples/app_async_flutter/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.com.bancolombia.app_async_flutter">
+        <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="app_async_flutter"
         android:name="${applicationName}"
