--- a/examples/back-async-java/applications/app-service/build.gradle
+++ b/examples/back-async-java/applications/app-service/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	implementation project(':async-event-bus')
 	testImplementation 'com.tngtech.archunit:archunit:1.3.0'
 	implementation project(':rest-consumer')
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
