--- a/examples/back-async-java/applications/app-service/src/main/resources/application.yaml
+++ b/examples/back-async-java/applications/app-service/src/main/resources/application.yaml
@@ -10,11 +10,16 @@ spring:
       enabled: true
       path: "/h2"
   profiles:
-    include: null
+    include: local
+logging:
+  level:
+    root: ${LOG_LEVEL:INFO}
 adapter:
+  reply-mode: ${REPLY_MODE:DIRECT} # DIRECT | BRIDGE
   restconsumer:
     timeout: 5000
     url: "${ADF_REST_ENDPOINT:http://localhost:8081/ext/channel}"
+    url-bridge: "${BRIDGE_REST_ENDPOINT:http://localhost:8081/ext/channel}"
 management:
   endpoints:
     web:
