feat: improve example to configure transports

--- a/examples/app_async_flutter/.env
+++ b/examples/app_async_flutter/.env
@@ -2,3 +2,4 @@ socketUrl=ws://localhost:8082/ext/socket
 apiBusiness=http://localhost:8080/api
 heartbeatInterval=2500
 maxRetries=12
+transports=ws,sse
