feat(sse): Use extended sse client as ws fallback, do some client refactor and update example

--- a/clients/client-js/package.json
+++ b/clients/client-js/package.json
@@ -50,7 +50,6 @@
     "deps": "^1.0.0",
     "eslint": "^8.49.0",
     "fast-text-encoding": "^1.0.3",
-    "fetch-mock": "^12.3.0",
     "jsdom": "22.1.0",
     "jsdom-global": "3.0.2",
     "mocha": "^11.1.0",
@@ -58,6 +57,7 @@
     "mock-socket": "^9.0.6",
     "node-fetch": "^2.6.1",
     "nyc": "^15.1.0",
+    "rxjs": "^7.8.1",
     "sinon": "^6.3.5",
     "sonar-scanner": "^3.1.0",
     "source-map-support": "^0.5.9",
