--- a/.github/workflows/build-client-js.yaml
+++ b/.github/workflows/build-client-js.yaml
@@ -16,7 +16,7 @@ jobs:
     # Setup .npmrc file to publish to npm
     - uses: actions/setup-node@v3
       with:
-        node-version: '20.x'
+        node-version: '20.15.1'
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
       name: Install dependencies
