--- a/.github/workflows/build-client-js.yaml
+++ b/.github/workflows/build-client-js.yaml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: '20.18.1'
-    - run: npm install --verbose
+    - run: npm install
       name: Install dependencies
     - run: npm run build
       name: Build
