build: clientjs-ci

--- a/clients/client-js/sonar-project.properties
+++ b/clients/client-js/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=bancolombia_async-dataflow-client-js
 sonar.organization=grupo-bancolombia
 sonar.projectName=async-dataflow-client-js
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 #sonar.projectVersion=1.0
 
 
