--- a/.github/workflows/release-client-js.yml
+++ b/.github/workflows/release-client-js.yml
@@ -1,5 +1,4 @@
-name: Deploy Async DataFlow channel sender JS client
-
+name: client-js-release
 on:
   push:
     tags:
@@ -12,16 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    # Setup .npmrc file to publish to npm
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
-        node-version: '18.x'
+        node-version: '20.18.1'
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
     - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
         registry-url: 'https://npm.pkg.github.com'
         scope: '@bancolombia'
