--- a/clients/client-js/sonar-project.properties
+++ b/clients/client-js/sonar-project.properties
@@ -2,7 +2,8 @@ sonar.projectKey=bancolombia_async-dataflow-client-js
 sonar.organization=grupo-bancolombia
 sonar.projectName=async-dataflow-client-js
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-#sonar.projectVersion=1.0
+sonar.sources=src
+sonar.tests=test
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
