--- a/clients/client-dart/pubspec.yaml
+++ b/clients/client-dart/pubspec.yaml
@@ -1,6 +1,6 @@
 name: channel_sender_client
 description: Client for Async DataFlow Channel Sender
-version: 2.0.3
+version: 3.0.0
 homepage: https://github.com/bancolombia/async-dataflow
 repository: https://github.com/bancolombia/async-dataflow.git
 
@@ -13,7 +13,13 @@ dependencies:
   validators: ^3.0.0
   uuid: ^3.0.5
   build_runner: ^2.2.0
+  # flutter_client_sse: ^2.0.3
+  flutter_client_sse:
+    path: /Users/sagarci/Documents/development/open-source/flutter_client_sse
 
+dependency_overrides:
+  http: ^1.1.0 
+  
 dev_dependencies:
   test: ^1.21.4
   mockito: ^5.2.0
