--- a/channel-sender/test/channel_sender_ex/test_config_files/config2.yaml
+++ b/channel-sender/test/channel_sender_ex/test_config_files/config2.yaml
@@ -22,7 +22,9 @@ channel_sender_ex:
       kubernetes_selector: "cluster=beam"
       namespace: "sendernm"
       polling_interval: 5000
-
+  persistence:
+    enabled: false
+    type: :noop
 logger:
   level: debug
 
