--- a/clients/client-dart/pubspec.yaml
+++ b/clients/client-dart/pubspec.yaml
@@ -13,13 +13,6 @@ dependencies:
   validators: ^3.0.0
   uuid: ^3.0.5
   build_runner: ^2.2.0
-  # flutter_client_sse: ^2.0.3
-  # flutter_client_sse:
-  #   git: 
-  #     url: https://github.com/santitigaga/flutter_client_sse
-  #     ref: feat/retry
-  # flutter_client_sse:
-  #   path: '/Users/gabrimar/desarrollo/flutter_client_sse'
   eventflux: ^2.2.1
   
 dependency_overrides:
@@ -27,6 +20,6 @@ dependency_overrides:
   
 dev_dependencies:
   test: ^1.21.4
-  mockito: ^5.2.0
+  mocktail: ^1.0.0
   flutter_lints: ^2.0.3
   dart_code_linter: ^1.0.0
