--- a/channel-sender/config/config-local.yaml
+++ b/channel-sender/config/config-local.yaml
@@ -72,17 +72,18 @@ channel_sender_ex:
       # secret: "redis-secret" # Secret to connect to the persistence layer secret can be json like: {"username": "", "password": "", "host": "", "hostread", "port": 0, "ssl": false}
       # if secret is provided, the other fields can be overwritten by the secret but only if there are present in the secret
 
-  cowboy:
-    # https://ninenines.eu/docs/en/cowboy/2.12/manual/cowboy_http/
-    protocol_options:
-      active_n: 4000
-      max_keepalive: 15000
-      request_timeout: 10000
-      idle_timeout: 120000
-    # https://ninenines.eu/docs/en/ranch/1.7/manual/ranch/
-    transport_options:
+  bandit:
+    http_1_options:
+      enabled: true
+      log_unknown_messages: true
+    http_2_options:
+      enabled: true
+    thousand_island_options:
       num_acceptors: 1000
-      max_connections: :infinity
+      num_connections: 16384
+      max_connections_retry_wait: 1000
+      max_connections_retry_count: 3
+      
 
 logger:
   level: debug
