--- a/.github/workflows/build-client-dart.yaml
+++ b/.github/workflows/build-client-dart.yaml
@@ -2,7 +2,7 @@ name: "flutter-actions"
 on:
   pull_request:
     paths:
-      - 'clients/client-dart/**'
+      - 'clients/client-dart/**' 
       - '.github/**/*dart*'
     branches:
       - master
@@ -16,16 +16,13 @@ jobs:
         working-directory: clients/client-dart
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Dart SDK
-        uses: dart-lang/setup-dart@v1
-        with:
-            sdk: 3.2.0
+      - uses: actions/checkout@v3
+      - uses: dart-lang/setup-dart@d6a63dab3335f427404425de0fbfed4686d93c4f
       - name: Setup Flutter SDK
-        uses: flutter-actions/setup-flutter@v4
+        uses: flutter-actions/setup-flutter@v2
         with:
           channel: stable
-          version: 3.16.0
+          version: 3.10.6
       - name: Install dependencies
         run: flutter pub get
       - name: Run test
