--- a/clients/client-dart/pubspec.yaml
+++ b/clients/client-dart/pubspec.yaml
@@ -11,14 +11,14 @@ dependencies:
   web_socket_channel: ^2.3.0
   logging: ^1.1.0
   validators: ^3.0.0
-  uuid: ^3.0.5
-  build_runner: ^2.2.0
-  
-dependency_overrides:
-  http: ^1.1.0 
+  http: ^1.1.0
+
+# dependency_overrides:
+#   http: ^1.1.0 
   
 dev_dependencies:
   test: ^1.21.4
   mocktail: ^1.0.0
   flutter_lints: ^2.0.3
-  dart_code_linter: ^1.0.0
+  dart_code_linter: ^1.3.0
+  build_runner: ^2.2.0
