--- a/clients/client-dart/pubspec.yaml
+++ b/clients/client-dart/pubspec.yaml
@@ -1,6 +1,6 @@
 name: channel_sender_client
 description: Client for Async DataFlow Channel Sender
-version: 3.0.0-beta.3
+version: 3.0.0
 homepage: https://github.com/bancolombia/async-dataflow
 repository: https://github.com/bancolombia/async-dataflow.git
 
