--- a/.github/workflows/build-client-js.yaml
+++ b/.github/workflows/build-client-js.yaml
@@ -7,6 +7,11 @@ on:
       - master
 jobs:
   build:
+    permissions:
+      contents: read
+      issues: read
+      pull-requests: read
+      packages: write
     defaults:
       run:
         working-directory: clients/client-js
