samples: update sample

--- a/examples/back-async-java/applications/app-service/src/main/resources/application.yaml
+++ b/examples/back-async-java/applications/app-service/src/main/resources/application.yaml
@@ -55,3 +55,7 @@ resilience4j:
         slidingWindowSize: 10
         minimumNumberOfCalls: 10
         waitDurationInOpenState: "10s"
+app:
+  async:
+    app:
+      secret: "${RABBITMQ_SECRET}"
