--- a/examples/back-async-java/infrastructure/driven-adapters/async-event-bus/build.gradle
+++ b/examples/back-async-java/infrastructure/driven-adapters/async-event-bus/build.gradle
@@ -1,7 +1,9 @@
 dependencies {
     implementation project(':model')
     implementation 'io.cloudevents:cloudevents-json-jackson:4.0.1'
-    implementation 'org.reactivecommons:async-commons-rabbit-starter:5.2.3'
+    implementation 'org.reactivecommons:async-commons-rabbit-starter:5.4.0'
+    implementation 'com.github.bancolombia:aws-secrets-manager-sync:4.4.31'
+    implementation 'software.amazon.awssdk:secretsmanager:2.31.16'
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-autoconfigure'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
