--- a/.github/workflows/release-client-elixir.yaml
+++ b/.github/workflows/release-client-elixir.yaml
@@ -3,7 +3,7 @@ name: Async DataFlow channel sender elixir client CI/RM
 on:
   push:
     tags:
-      - 'sender_client_elixir_*' # Push events to matching sender_client_elixir_*
+      - 'channel_sender_elixir_*' # Push events to matching sender_client_elixir_*
 
 jobs:
   build:
@@ -14,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       - name: Set up Elixir
-        uses: erlef/setup-beam@v1.17.6
+        uses: erlef/setup-beam@75edbb82877ab10edeb12a99c3cf2f0909f3dc87 # v1.20.1
         with:
-          elixir-version: '1.13.4' # Define the elixir version [required]
-          otp-version: '24' # Define the OTP version [required]
+          elixir-version: '1.16' # Define the elixir version [required]
+          otp-version: '26' # Define the OTP version [required]
       - name: Restore dependencies cache
         uses: actions/cache@v3
         with:
@@ -30,23 +30,9 @@ jobs:
         run: mix deps.get
       - name: Run tests
         run: mix test
-      - name: Set release env
-        if: github.event_name == 'release'
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Upgrade mix.exs
         if: github.event_name == 'release'
-        run: sed -i 's/@version \".*\"/@version "${{ env.RELEASE_VERSION }}"/g' mix.exs
-      - name: Save version
-        if: github.event_name == 'release'
-        uses: github-actions-x/commit@722d56b8968bf00ced78407bbe2ead81062d8baa
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          push-branch: main
-          commit-message: 'Upgrade version to ${{ env.RELEASE_VERSION }}'
-          force-add: "true"
-          files: mix.exs
-          name: Release Bot
-          email: release-bot@bancolombia.com.co
+        run: sed -i 's/@version \".*\"/@version "${GITHUB_REF##*_}"/g' mix.exs
       - name: Publish
         if: github.event_name == 'release'
         run: mix hex.publish --replace --yes
