--- a/channel-sender/test/channel_sender_ex/test_config_files/config1.yaml
+++ b/channel-sender/test/channel_sender_ex/test_config_files/config1.yaml
@@ -23,6 +23,8 @@ channel_sender_ex:
     #   kubernetes_selector: "cluster=beam"
     #   namespace: "sendernm"
     #   polling_interval: 5000
+  opentelemetry:
+    traces_enable: false
 
 logger:
   level: debug
