--- a/channel-sender/test/channel_sender_ex/test_config_files/config2.yaml
+++ b/channel-sender/test/channel_sender_ex/test_config_files/config2.yaml
@@ -22,6 +22,10 @@ channel_sender_ex:
       kubernetes_selector: "cluster=beam"
       namespace: "sendernm"
       polling_interval: 5000
+  opentelemetry:
+    traces_enable: true
+    traces_endpoint: "http://localhost:4318"
+    traces_ignore_routes: [ "/health", "/metrics" ]
 
 logger:
   level: debug
