--- a/clients/client-dart/pubspec.yaml
+++ b/clients/client-dart/pubspec.yaml
@@ -1,22 +1,26 @@
 name: channel_sender_client
 description: Client for Async DataFlow Channel Sender
-version: 3.0.1
+version: 3.0.2-beta.1
 homepage: https://github.com/bancolombia/async-dataflow
 repository: https://github.com/bancolombia/async-dataflow.git
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
   web_socket_channel: ^2.3.0
   logging: ^1.1.0
   validators: ^3.0.0
   http: ^1.1.0
+  connectivity_plus: ^3.0.2
+  rxdart: ^0.27.7
 
-# dependency_overrides:
-#   http: ^1.1.0 
+dependency_overrides:
+  source_span: 1.9.1
   
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   test: ^1.21.4
   mocktail: ^1.0.0
   flutter_lints: ^2.0.3
